# Calendar-API

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.yaml
docs/: architecture.md  data_dictionary.md
notebooks/: 01_setup.py  02_daily_refresh.py
sql/: setup_dim_calendar.sql  validate_dim_calendar.sql
src/: __init__.py  generate_dim_calendar.py
src/utils/: __init__.py  fred_api.py
tests/: __init__.py  test_calendar_generation.py
